--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.castraining.app_castraining_privada">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -11,10 +12,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCASTrainingPrivada"
+        android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".View.Priv_Login"
+            android:exported="false" />
+        <activity
+            android:name=".View.Priv_InicioFacebook"
+            android:exported="false" />
+        <activity
+            android:name=".View.Priv_InicioApple"
+            android:exported="false" />
+        <activity
+            android:name=".View.Priv_InicioGoogle"
+            android:exported="false" />
+        <activity
+            android:name=".View.Priv_InicioMail"
+            android:exported="false" />
+        <activity
+            android:name=".Pri_MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
