--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     implementation 'com.google.firebase:firebase-bom:30.0.0'
-    implementation 'com.google.firebase:firebase-auth:21.0.3'//Importa Firebase BoM
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'//Importa Firebase BoM
 
 
     testImplementation 'junit:junit:4.13.2'
