--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,25 +16,22 @@
         android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".View.Priv_NuevoUsuario"
+            android:name=".view.PrivNuevoUsuario"
             android:exported="false" />
         <activity
-            android:name=".View.Priv_Login"
+            android:name=".view.PrivInicioFacebook"
             android:exported="false" />
         <activity
-            android:name=".View.Priv_InicioFacebook"
+            android:name=".view.PrivInicioApple"
             android:exported="false" />
         <activity
-            android:name=".View.Priv_InicioApple"
+            android:name=".view.PrivInicioGoogle"
             android:exported="false" />
         <activity
-            android:name=".View.Priv_InicioGoogle"
+            android:name=".view.PrivInicioMail"
             android:exported="false" />
         <activity
-            android:name=".View.Priv_InicioMail"
-            android:exported="false" />
-        <activity
-            android:name=".Pri_MainActivity"
+            android:name=".PrivMainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
